--- a/package.json
+++ b/package.json
@@ -84,5 +84,9 @@
     "ts-node": "^9.1.1",
     "typechain": "^4.0.1",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "@sinonjs/fake-timers": "^7.0.2",
+    "@types/sinonjs__fake-timers": "^6.0.2"
   }
 }
