--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@nomiclabs/hardhat-etherscan": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "3.3.0-solc-0.7",
+    "@openzeppelin/contracts-upgradeable": "3.4.1-solc-0.7-2",
     "@sinonjs/fake-timers": "^7.0.2",
     "@sushiswap/core": "^1.4.1",
     "@typechain/ethers-v5": "^5.0.0",
@@ -69,9 +70,9 @@
     "eslint-plugin-prettier": "^3.3.0",
     "ethereum-waffle": "^3.2.1",
     "ethers": "^5.0.24",
-    "hardhat": "^2.0.6",
+    "hardhat": "^2.1.2",
     "hardhat-abi-exporter": "^2.0.7",
-    "hardhat-deploy": "^0.7.0-beta.38",
+    "hardhat-deploy": "^0.7.0-beta.58",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
     "mocha": "^8.2.1",
