--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-MNEMONIC="test test test test test test test test test test test junk"
 INFURA_TOKEN=<token>
 ETHERSCAN_API_KEY=<key>
-DEPLOYER_ACCOUNT_INDEX=0
-TESTER_ACCOUNT_INDEX=1
+DEPLOYER_KEY=<private key>
