build: add flexibility to network config

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
-INFURA_TOKEN=<token>
-ETHERSCAN_API_KEY=<key>
-DEPLOYER_KEY=<private key>
+# Specific node uri (uses generic if not set). `"ETH_NODE_URI_" + networkName.toUpperCase()`
+ETH_NODE_URI_MAINNET=
+
+# Generic node uri: https://{{networkName}}.infura.io/v3/<apiKey>
+ETH_NODE_URI=
+
+# Etherscan api key if verifying contracts
+ETHERSCAN_API_KEY=
+
+# Specific private key to use for deploying (uses generic if not set). `"DEPLOYER_KEY_" + networkName.toUpperCase()`
+DEPLOYER_KEY_MAINNET=
+
+# Generic private key to use for deploying
+DEPLOYER_KEY=
