build: allow forking & add ProxyAdmin deploy

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ ETH_NODE_URI=
 # Etherscan api key if verifying contracts
 ETHERSCAN_API_KEY=
 
+# Alchemy endpoint used for forking
+ALCHEMY_URI=
+
 # Specific private key to use for deploying (uses generic if not set). `"DEPLOYER_KEY_" + networkName.toUpperCase()`
 DEPLOYER_KEY_MAINNET=
 
