chore: add scripts to interact with contracts

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-# Specific node uri (uses generic if not set). `"ETH_NODE_URI_" + networkName.toUpperCase()`
+# Specific node uri (uses generic if not set).
+# `"ETH_NODE_URI_" + networkName.toUpperCase()`
 ETH_NODE_URI_MAINNET=
 
 # Generic node uri: https://{{networkName}}.infura.io/v3/<apiKey>
@@ -10,8 +11,16 @@ ETHERSCAN_API_KEY=
 # Alchemy endpoint used for forking
 ALCHEMY_URI=
 
-# Specific private key to use for deploying (uses generic if not set). `"DEPLOYER_KEY_" + networkName.toUpperCase()`
+# Specific private key to use for deploying (uses generic if not set).
+# `"DEPLOYER_KEY_" + networkName.toUpperCase()`
 DEPLOYER_KEY_MAINNET=
 
 # Generic private key to use for deploying
 DEPLOYER_KEY=
+
+# Private key to use for permission-less scripts (uses generic if not set).
+# `"USER_KEY_" + networkName.toUpperCase()`
+USER_KEY_MAINNET=
+
+# Generic private key to use for permission-less scripts.
+USER_KEY=
