--- a/package.json
+++ b/package.json
@@ -18,16 +18,13 @@
     "lint:tsc": "tsc --noEmit",
     "lint:eslint": "eslint \"*/**/*.{js,jsx,ts,tsx}\"",
     "lint:sol": "solhint contracts/**/*.sol",
+		"pre-commit": "tsc --noEmit && lint-staged",
     "preinstall": "npx only-allow pnpm",
+		"prepare": "husky install",
     "test": "hardhat test",
     "verify": "hardhat etherscan-verify --solc-input",
     "clean": "shx rm -rf build",
     "clean:dev": "rm -rf build node_modules"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsc --noEmit && lint-staged"
-    }
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -39,56 +36,56 @@
   },
   "devDependencies": {
     "@ethereum-waffle/compiler": "^3.3.1",
-    "@ethersproject/abi": "^5.0.9",
-    "@ethersproject/bignumber": "^5.0.12",
-    "@ethersproject/bytes": "^5.0.8",
-    "@ethersproject/constants": "^5.0.7",
-    "@ethersproject/contracts": "^5.0.8",
-    "@ethersproject/providers": "^5.0.17",
-    "@ethersproject/units": "^5.0.8",
-    "@ethersproject/wallet": "^5.0.9",
-    "@nomiclabs/hardhat-ethers": "^2.0.1",
-    "@nomiclabs/hardhat-etherscan": "^2.1.0",
+    "@ethersproject/abi": "^5.1.0",
+    "@ethersproject/bignumber": "^5.1.0",
+    "@ethersproject/bytes": "^5.1.0",
+    "@ethersproject/constants": "^5.1.0",
+    "@ethersproject/contracts": "^5.1.0",
+    "@ethersproject/providers": "^5.1.0",
+    "@ethersproject/units": "^5.1.0",
+    "@ethersproject/wallet": "^5.1.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^2.1.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "3.3.0-solc-0.7",
+    "@openzeppelin/contracts": "3.4.1-solc-0.7-2",
     "@openzeppelin/contracts-upgradeable": "3.4.1-solc-0.7-2",
-    "@sinonjs/fake-timers": "^7.0.2",
-    "@sushiswap/core": "^1.4.1",
-    "@typechain/ethers-v5": "^5.0.0",
-    "@typechain/web3-v1": "^2.0.0",
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.14",
+    "@sinonjs/fake-timers": "^7.0.5",
+    "@sushiswap/core": "^1.4.2",
+    "@typechain/ethers-v5": "^6.0.5",
+    "@typechain/web3-v1": "^2.2.0",
+    "@types/chai": "^4.2.16",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^14.14.41",
     "@types/sinonjs__fake-timers": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "@uniswap/lib": "^4.0.1-alpha",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "chai": "^4.2.0",
+    "chai": "^4.3.4",
     "dotenv": "^8.2.0",
-    "eslint": "^7.16.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-mocha": "^8.0.0",
-    "eslint-plugin-prettier": "^3.3.0",
-    "ethereum-waffle": "^3.2.1",
-    "ethers": "^5.0.24",
-    "hardhat": "^2.1.2",
-    "hardhat-abi-exporter": "^2.0.7",
-    "hardhat-deploy": "^0.7.0-beta.58",
-    "husky": "^4.3.6",
-    "lint-staged": "^10.5.3",
-    "mocha": "^8.2.1",
+    "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-mocha": "^8.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "ethereum-waffle": "^3.3.0",
+    "ethers": "^5.1.0",
+    "hardhat": "^2.2.0",
+    "hardhat-abi-exporter": "^2.2.0",
+    "hardhat-deploy": "^0.7.4",
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
+    "mocha": "^8.3.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.2",
+    "prettier-plugin-solidity": "^1.0.0-beta.9",
     "shx": "^0.3.3",
-    "solhint": "^3.3.2",
+    "solhint": "^3.3.4",
     "solhint-plugin-prettier": "^0.0.5",
     "truffle-flattener": "^1.5.0",
     "ts-generator": "^0.1.1",
     "ts-node": "^9.1.1",
-    "typechain": "^4.0.1",
-    "typescript": "^4.1.3"
+    "typechain": "^4.0.3",
+    "typescript": "^4.2.4"
   }
 }
