ci: run on version tag

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -4,6 +4,9 @@ on:
     types: [opened, synchronize, reopened]
     branches:
       - main
+  push:
+    tags:
+      - 'v*'
 
 name: Continuous Integration
 
