feat: add proxy verification script

--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "lint:tsc": "tsc --noEmit",
     "lint:eslint": "eslint \"*/**/*.{js,jsx,ts,tsx}\"",
     "lint:sol": "solhint contracts/**/*.sol",
-		"pre-commit": "tsc --noEmit && lint-staged",
+    "pre-commit": "tsc --noEmit && lint-staged",
     "preinstall": "npx only-allow pnpm",
-		"prepare": "husky install",
+    "prepare": "husky install",
     "test": "hardhat test",
     "verify": "hardhat etherscan-verify --solc-input",
+		"verify:proxies": "hardhat run \"scripts/verify-proxies.ts\"",
     "clean": "shx rm -rf build",
     "clean:dev": "rm -rf build node_modules"
   },
@@ -62,6 +63,7 @@
     "@uniswap/lib": "^4.0.1-alpha",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "axios": "^0.21.1",
     "chai": "^4.3.4",
     "dotenv": "^8.2.0",
     "eslint": "^7.24.0",
