--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@weiward/contracts",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Smart contracts for the weiWard platform.",
   "author": "weiWard LLC",
   "license": "(Apache-2.0 OR MIT)",
@@ -59,6 +59,7 @@
     "@types/chai": "^4.2.17",
     "@types/mocha": "^8.2.2",
     "@types/node": "15",
+    "@types/node-schedule": "^1.3.2",
     "@types/sinonjs__fake-timers": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
@@ -80,6 +81,7 @@
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
     "mocha": "^8.3.2",
+    "node-schedule": "^2.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "prettier-plugin-solidity": "^1.0.0-beta.10",
